# gimpsep-aybikeduygutaylan

multimediaproject/: CMakeLists.txt  ImageEditor.cpp  ImageEditor.h  VideoManipulations.cpp  VideoManipulations.h  main.cpp
